dash app requirements update

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
 dash
 dash-bootstrap-components
-matplotlib
-seaborn
+pandas
 numpy
+scikit-learn
+xgboost
+tensorflow
+joblib
+plotly
+seaborn
+matplotlib
+gunicorn
